Revision history for Perl extension Set::Infinite.

- New methods:
  universal_set
  empty_set
  minus / difference (same as "complement")
  simmetric_difference

0.56  2004-03-17
- New method: clone (same as "copy")
- More tests & fixes: intersected_spans

0.5503  2004-03-15
- New method: intersected_spans
  Suggested by Reinhold May
  Name suggested by Dave Rolsky
- bugfix: first/last() of a union will try harder not to split spans.

0.5502  2004-03-14
- New methods: start_set / end_set 
  These are the inverse of the "until" method.
  Suggested by Reinhold May

0.5501 
    refactored _backtrack method

0.55   2003-11-16
    - bug fix: $set = Set::Infinite->new( -10, 0 );
      created a set with "-10" instead of [-10..0]
    - documents that the parameters to new() must be sorted. 
      Reported by Jim Cromie

0.5401  2003-10-21
    specifying start > end in a constructor is a fatal error.

0.54
0.5308  2003-10-16
    clears mod_perl warnings - change the order of modules and constants.
    Patch by Dan Kubb

0.5307
    backtracking "iterate" uses a larger span

0.5306
    fix bug in test "inf" -> "$inf".  Thanks Kingpin

0.5305
    %_first and %_last are declared with 'use vars'

0.5304
    added more tests: intersects/until/select
    optimized select()
    refactored quantize()

0.5303
    removed Set::Infinite::Date
    removed /_eg directory
    simplified README

0.5302
    select( freq => $n ) is removed. 
    - breaks Date::Set 0.28 (Date::Set 0.29 is ok)
    select( by => [] ) default is changed to 'All'.
    - in order to have the same behaviour as when 'freq' was omitted.

0.5301
    refactored methods: min, max, first, last, until, iterate, offset
    removed obsolete method: compact
    renamed internal methods with _underline
    removed obsolete 'date' docs

0.53    2003-09-05
    fixes a test that fails under 5.00503
    does not export 'new'

0.52    2003-09-04
    change tests to run under (a broken) Perl 5.9.0